--- a/src/app/forms/basic/basic.component.html
+++ b/src/app/forms/basic/basic.component.html
@@ -31,6 +31,8 @@
           [ngClass]="{ 'border-danger': zip?.dirty && zip?.errors != undefined }"
           id="zip"
           formControlName="zip"
+          numeric
+          [length]=5
         />
       </div>
       <div class="row pb-2">
