--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
-<div class="py-5">
-  <basic></basic>
+<nav class="navbar navbar-expand bg-light">
+  <div class="container">
+    <div>
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/">basic</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/dynamic">dynamic</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div class="container py-5">
+  <router-outlet></router-outlet>
 </div>
