--- a/src/app/forms/dynamic/shared/single-select/single-select.component.html
+++ b/src/app/forms/dynamic/shared/single-select/single-select.component.html
@@ -1,11 +1,15 @@
 <div class="dropdown">
-  <button class="btn btn-outline-dark dropdown-toggle rounded-0 w-100" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-    {{ option ? option.value : default.value }}
+  <button
+    class="btn btn-outline-dark btn-sm dropdown-toggle rounded-0 w-100"
+    type="button"
+    data-bs-toggle="dropdown"
+    aria-expanded="false"
+  >
+    {{ option ? option.value : "Select Dropdown" }}
   </button>
   <ul class="dropdown-menu w-100">
     <li *ngFor="let option of options">
       <a
-        *ngIf="!option.hidden"
         class="dropdown-item"
         [ngClass]="{ disabled: option.disabled }"
         (click)="setOption(option)"
