--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" aria-current="page" routerLink="/">basic</a></li>
         <li class="nav-item"><a class="nav-link" routerLink="/dynamic">dynamic</a></li>
+        <li class="nav-item"><a class="nav-link" routerLink="/override">override</a></li>
       </ul>
     </div>
   </div>
