--- a/src/app/forms/override/ticket/order/order.component.html
+++ b/src/app/forms/override/ticket/order/order.component.html
@@ -9,7 +9,7 @@
     <div class="col-2">
       <div class="row">
         <div class="col-auto py-0 align-self-center pe-0">
-          <input class="form-check-input mt-0" style="height: 25px; width: 25px" type="checkbox" />
+          <input class="form-check-input mt-0" style="height: 25px; width: 25px" type="checkbox" (change)="onSelect(id.value, $event)"/>
         </div>
         <div class="col">
           <single-select formControlName="side" [options]="Constants.Sides"></single-select>
