--- a/src/app/forms/override/ticket/ticket.component.html
+++ b/src/app/forms/override/ticket/ticket.component.html
@@ -20,6 +20,11 @@
                 </button>
               </div>
               <div class="col">
+                <button class="btn btn-outline-success btn-sm rounded-0 w-100" (click)="setAccount()">
+                  set account
+                </button>
+              </div>
+              <div class="col">
                 <label for="cusip" class="form-label">cusip</label>
                 <input type="text" class="form-control form-control-sm rounded-0" [(ngModel)]="batchCusipValue" />
               </div>
